tests/negative/typecheck/try-function-incompat.orng
fn main() -> Int
    f() catch 0

fn f() -> Char!Int
    let x = try g()
    (.ok <- 0)

fn g() -> ()!Int
    return .err